--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,30 +9,68 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='ocean_logo_100.png') }}" type="image/x-icon">
     <link rel="icon" href="{{ url_for('static', filename='ocean_logo_100.png') }}" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    {# ckeditor #}
+    <script type="text/javascript" id="ckeditor-js"></script>
+{% endblock %}
+
+{# 编辑文章模态框 #}
+{% block body %}
+    {% if post_form %}
+        <div class="modal fade bs-example-modal-lg" id="writeArticleDialog" tabindex="-1" role="dialog"
+             aria-labelledby="myModalLabel">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="myModalLabel">发表水滴</h4>
+                    </div>
+
+                    <div class="modal-body">
+                        <form class="form" method="post">
+                            {{ post_form.hidden_tag() }}
+                            {{ wtf.form_field(post_form.post_title) }}
+                            {{ wtf.form_field(post_form.post_body, class="ckeditor", style="min-height: 380px") }}
+                            {{ wtf.form_field(post_form.submit, class="form-submit", hidden="hidden") }}
+                        </form>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="button" class="btn btn-primary" id="post-button">发表</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+    {{ super() }}
 {% endblock %}
 
 {% block navbar %}
     <nav class="navbar navbar-default" role="navigation">
-         <div class="container">
-             <div class="navbar-header">
-                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                     <span class="sr-only">Toggle navigation</span>
-                     <span class="icon-bar"></span>
-                     <span class="icon-bar"></span>
-                     <span class="icon-bar"></span>
-                 </button>
-                 <a class="navbar-brand" href="{{ url_for('main.index') }}">
-                     Ocean
-                 </a>
-             </div>
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{{ url_for('main.index') }}">
+                    Ocean
+                </a>
+            </div>
 
-             <div class="navbar-collapse collapse navbar-right">
-                 <ul class="nav navbar-nav">
-                     <li><a href="/">首页</a></li>
+            <div class="navbar-collapse collapse navbar-right">
+                <ul class="nav navbar-nav">
+                    <li><a href="/">首页</a></li>
 
-                     {% if current_user.is_authenticated %}
-                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" style="padding: 10px" data-toggle="dropdown" role="button"
+                    {% if current_user.is_authenticated %}
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" style="padding: 10px" data-toggle="dropdown"
+                               role="button"
                                aria-haspopup="true" aria-expanded="false">
                                 <img src="{{ url_for('static', filename="{subpath}/{filename}".format(subpath=current_app.config['USER_AVATAR_SUBPATH'],
                                                                                                       filename=current_user.user_avatar_hash)) }}"
@@ -40,38 +78,51 @@
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="{{ url_for('main.profile', user_name=current_user.user_name) }}">个人主页</a></li>
+                                <li><a href="{{ url_for('main.profile', user_name=current_user.user_name) }}">个人主页</a>
+                                </li>
                                 <li><a href="{{ url_for('auth.account') }}">账号</a></li>
                                 <li><a href="#">我的收藏</a></li>
                                 <li><a href="{{ url_for('auth.logout') }}">退出</a></li>
                             </ul>
-                         </li>
-                     {% else %}
-                         <li><a href="{{ url_for('auth.login') }}">登陆</a></li>
-                     {% endif %}
+                        </li>
+                    {% else %}
+                        <li><a href="{{ url_for('auth.login') }}">登陆</a></li>
+                    {% endif %}
 
-                     <li></li>
-                 </ul>
-             </div>
-         </div>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        {{ message }}
-    </div>
-    {% endfor %}
+    <div class="container">
+        {% for message in get_flashed_messages() %}
+            <div class="alert alert-warning">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                {{ message }}
+            </div>
+        {% endfor %}
 
-    {% block page_content %}{% endblock %}
-</div>
+        {% block page_content %}{% endblock %}
+    </div>
 {% endblock %}
 
 {% block scripts %}
     {{ super() }}
     {{ moment.include_moment() }}
     {{ moment.lang('zh-cn') }}
+    <script>
+        $(function () {
+            //判断是否宽屏调用basic或full版本ckeditor
+            var winWide = window.screen.width;
+            if (winWide <= 1024) {//1024及以下分辨率
+                $("#ckeditor-js").attr("src", "//cdn.ckeditor.com/4.7.1/basic/ckeditor.js");
+            } else {
+                $("#ckeditor-js").attr("src", "//cdn.ckeditor.com/4.7.1/full/ckeditor.js");
+            }
+
+        });
+    </script>
 {% endblock %}
