--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -2,76 +2,80 @@
 {% import "macros/_macro_pagination_widget.html" as macros %}
 
 {% block title %}
-    Ocean - 个人资料
+    Ocean - {{ user.user_name }}个人主页
 {% endblock %}
 
 {% block page_content %}
-    <div class="container-fluid box-shadow page-header-no-bottom">
+    <div class="page-header-profile">
+        <div class="container-fluid box-shadow page-header-no-bottom">
 
-        <div class="col-md-2">
-            <div class="row-fluid">
-                {% if current_user == user %}
-                    <div class="img-mask center-block">
+            <div class="col-md-2">
+                <div class="row-fluid">
+                    {% if current_user == user %}
+                        <div class="img-mask center-block">
+                            <figure class="effect-avatar">
+                                <img src="{{ url_for('static', filename="{subpath}/{filename}".format(subpath=current_app.config['USER_AVATAR_SUBPATH'],
+                                                                                                  filename=user.user_avatar_hash)) }}"
+                                     class="img-rounded center-block" width="140" alt="{{ user.user_name }}"/>
+                                <figcaption>
+                                    <p>修改头像</p>
+                                </figcaption>
+                            </figure>
+                        </div>
+                    {% else %}
                         <figure class="effect-avatar">
                             <img src="{{ url_for('static', filename="{subpath}/{filename}".format(subpath=current_app.config['USER_AVATAR_SUBPATH'],
                                                                                                   filename=user.user_avatar_hash)) }}"
-                                 class="img-rounded center-block" width="140" alt="{{ user.user_name }}"/>
-                            <figcaption>
-                                <p>修改头像</p>
-                            </figcaption>
+                                 class="img-rounded center-block" width="140" alt="ddd"/>
                         </figure>
-                    </div>
-                {% else %}
-                    <figure class="effect-avatar">
-                        <img src="{{ url_for('static', filename="{subpath}/{filename}".format(subpath=current_app.config['USER_AVATAR_SUBPATH'],
-                                                                                                  filename=user.user_avatar_hash)) }}"
-                             class="img-rounded center-block" width="140" alt="ddd"/>
-                    </figure>
-                {% endif %}
+                    {% endif %}
 
-                <br/>
-                <form method=POST enctype=multipart/form-data hidden="hidden"
-                      action="{{ url_for('main.profile', user_name=user.user_name) }}">
-                    <input type=file name=photo class="btn btn-default" id="upload-file">
-                    <input type=submit class="btn btn-default">
-                </form>
-                <p class="text-center">
-                    {{ user.user_name }}
+                    <br/>
+                    <form method=POST enctype=multipart/form-data hidden="hidden"
+                          action="{{ url_for('main.profile', user_name=user.user_name) }}">
+                        <input type=file name=photo class="btn btn-default" id="upload-file">
+                        <input type=submit class="btn btn-default">
+                    </form>
+                    <p class="text-center">
+                        {{ user.user_name }}
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-md-8">
+                <p>
+                    {% if user.user_location %}
+                        {{ user.user_location }}&nbsp;&nbsp;
+                    {% endif %}
+                    上次登录：{{ moment(user.user_last_seen).fromNow(refresh=True) }}
+                </p>
+                <p class="text-left lead">
+                    {% if user.user_about_me %}
+                        {{ user.user_about_me }}
+                    {% else %}
+                        这个煞笔什么都没有写~
+                    {% endif %}
                 </p>
             </div>
-        </div>
 
-        <div class="col-md-8">
-            <p>
-                {% if user.user_location %}
-                    {{ user.user_location }}&nbsp;&nbsp;
+            <div class="col-md-2">
+                {% if current_user.is_administrator %}
+                    <a class="btn btn-block btn-danger"
+                       href='{{ url_for('main.edit_profile_admin', uid=user.user_id) }}'>
+                        编辑资料[Admin]
+                    </a>
+                {% elif current_user == user %}
+                    <a class="btn btn-block btn-default" href='{{ url_for('main.edit_profile') }}'>
+                        编辑个人资料
+                    </a>
                 {% endif %}
-                上次登录：{{ moment(user.user_last_seen).fromNow(refresh=True) }}
-            </p>
-            <p class="text-left lead">
-                {% if user.user_about_me %}
-                    {{ user.user_about_me }}
-                {% else %}
-                    这个煞笔什么都没有写~
+                {% if current_user != user %}
+                    <a class="btn btn-block btn-default" type="button">关注</a>
                 {% endif %}
-            </p>
-        </div>
-
-        <div class="col-md-2">
-            {% if current_user.is_administrator %}
-                <a class="btn btn-block btn-danger" href='{{ url_for('main.edit_profile_admin', uid=user.user_id) }}'>
-                    编辑资料[Admin]
-                </a>
-            {% elif current_user == user %}
-                <a class="btn btn-block btn-default" href='{{ url_for('main.edit_profile') }}'>
-                    编辑个人资料
-                </a>
-            {% endif %}
-            {% if current_user != user %}
-                <a class="btn btn-block btn-default" type="button">关注</a>
-            {% endif %}
+            </div>
         </div>
     </div>
+
 
     {# 显示文章列表 #}
     {% include "post/_posts.html" %}
@@ -79,7 +83,7 @@
     {# 分页插件 #}
     {% if pagination %}
         <div>
-            {{ macros.pagination_widget(pagination, 'main.index') }}
+            {{ macros.pagination_widget(pagination, 'main.profile', user_name=user.user_name) }}
         </div>
     {% endif %}
 
